--- a/pom.xml
+++ b/pom.xml
@@ -24,32 +24,12 @@
             <version>${jda.version}</version>
         </dependency>
 
-        <!-- Firebase Admin SDK Dependency -->
-        <dependency>
-            <groupId>com.google.firebase</groupId>
-            <artifactId>firebase-admin</artifactId>
-            <version>${firebase-admin.version}</version>
-        </dependency>
-
-        <!-- Google Cloud Firestore Dependency -->
-        <dependency>
-            <groupId>com.google.cloud</groupId>
-            <artifactId>google-cloud-firestore</artifactId>
-            <version>2.5.0</version>
-        </dependency>
-
-        <!-- Google Auth Library Dependency -->
-        <dependency>
-            <groupId>com.google.auth</groupId>
-            <artifactId>google-auth-library-oauth2-http</artifactId>
-            <version>${google-auth.version}</version>
-        </dependency>
 
         <!-- SLF4J Dependency (Required for logging) -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.2.11</version> <!-- or any other recent version -->
+            <version>1.2.11</version>
         </dependency>
 
 
@@ -66,5 +46,12 @@
             <artifactId>resend-java</artifactId>
             <version>3.1.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>4.6.1</version>
+        </dependency>
+
     </dependencies>
 </project>
