--- a/src/main/resources/.env.example
+++ b/src/main/resources/.env.example
@@ -1,6 +1,5 @@
-DISCORD_TOKEN="dsicord.token"
-FIREBASE_CONFIG_PATH="path/to/firebase-file.json"
+DISCORD_TOKEN="discord.token"
 CHANNEL_ID="1265644256521883688"
 EXECUTIVE_ROLE_ID="1265624771844898906"
-DEPARTMENT_ROLE_ID="1270358423778623528"
 RESEND_TOKEN="re_12345678"
+CONNECTION_STRING="mongodb+srv://"
